--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -33,4 +33,14 @@ label {
 
 .address {
   margin-top: 10px;
+
+}.MuiTablePagination-displayedRows {
+  display: none;
+}
+#home{
+  display: flex;justify-content: center;
+  align-items: center;
+ }
+.MuiTableRow-root{
+  margin: 50px;
 }
