--- a/src/style/index.css
+++ b/src/style/index.css
@@ -30,4 +30,18 @@ label {
 
 .address {
   margin-top: 10px;
+}
+
+.MuiTablePagination-displayedRows {
+  display: none;
+}
+
+#home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.MuiTableRow-root {
+  margin: 50px;
 }/*# sourceMappingURL=index.css.map */
